--- a/TGSTuts Wurzelimperium Bot/manifest.json
+++ b/TGSTuts Wurzelimperium Bot/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "WurzelImperium Manager Pro",
+  "name": "WurzelImperium Bot by TGSTuts",
   "version": "6.1",
   "permissions": ["activeTab", "scripting", "storage"],
   "action": {
